<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_background_04"
    tools:context=".WelcomePageActivity">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settingsBtn"
                android:background="@drawable/round_corner_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="settingsOnClick"
                android:text="@string/settings" />

            <Button
                android:id="@+id/detailsBtn"
                android:background="@drawable/round_corner_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="detailsOnClick"
                android:text="@string/details" />
        </LinearLayout>

        <TextView
            android:id="@+id/homeLoanTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/homeLoantxt"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/amount_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/amountTxt"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/interestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/typeOfInterest"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/rate_id"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/forTxtView"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="% for "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/years_id"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/yearsTxtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/years"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/CalculBtn"
            android:onClick="calculBtn_onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/calculate"
            android:textSize="18sp" />



    </LinearLayout>
</RelativeLayout>