<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.85"
    android:background="@drawable/setting_background_04"
    tools:context=".activity_setting_page">

    <ImageView
        android:id="@+id/settingKeyImageView"
        android:layout_width="131dp"
        android:layout_height="131dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="528dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fbutton:srcCompat="@android:drawable/ic_menu_manage" />

    <EditText
        android:id="@+id/currency_title"
        android:layout_width="134dp"
        android:layout_height="65dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="246dp"
        android:layout_marginBottom="439dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/currency"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:inputType="" />

    <ImageView
        android:id="@+id/dollarImageView2"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="254dp"
        android:layout_marginRight="254dp"
        android:layout_marginBottom="353dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/dollar_layer" />

    <ImageView
        android:id="@+id/euroImageView8"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="353dp"
        android:contentDescription="@string/Euro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/poundImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dollarImageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/poundImageView"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginStart="247dp"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="353dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/pound_layer" />

    <RadioButton
        android:id="@+id/dollarRadioBtn"
        android:onClick="dollarRadioBtn_onClick"
        android:layout_width="81dp"
        android:layout_height="28dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="367dp"
        android:layout_marginEnd="272dp"
        android:layout_marginRight="272dp"
        android:layout_marginBottom="332dp"
        android:clickable="true"
        android:text="Dollar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/poundRadioBtn"
        android:onClick="poundRadioBtn_onClick"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:layout_marginStart="269dp"
        android:layout_marginLeft="269dp"
        android:layout_marginTop="367dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="332dp"
        android:clickable="true"
        android:text="Pound"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/euroRadioBtn"
        android:onClick="euroRadioBtn_onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="367dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:layout_marginBottom="332dp"
        android:text="Euro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/paymentFrequencyEditTxt"
        android:layout_width="291dp"
        android:layout_height="61dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="284dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/payment_frequency"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/biWeeklyRadioBtn"
        android:onClick="biWeeklyRadioBtn_onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="472dp"
        android:clickable="true"
        android:text="Bi-Weekly"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/weeklyRadioBtn"
        android:onClick="weeklyRadioBtn_onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:clickable="true"
        android:text="Weekly"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/monthlyRadioBtn"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/biWeeklyRadioBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/monthlyRadioBtn"
        android:onClick="monthlyRadioBtn_onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:clickable="true"
        android:text="Monthly"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:onClick="saveOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="593dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/round_corner_button"
        android:padding="10dp"
        android:text="Save"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>

